formula: add compiler and executor
